# verilog-ethernet

./: pyproject.toml
rtl/: components.vhd  ssio_sdr_in_diff.v  udp_checksum_gen.v
verilog_ethernet/: __init__.py  module_verilog_ethernet.py
verilog_ethernet/scoped_constraints/: eth_mac.tcl  eth_mac_1g_gmii.tcl  eth_mac_1g_rgmii.tcl  eth_mac_fifo.tcl  gmii_phy_if.tcl  mii_phy_if.tcl  ptp_clock_cdc.tcl  rgmii_phy_if.tcl
