[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "verilog_ethernet"
version = "1.0.0"
description = "verilog-ethernet packaged for tsfpga and with VHDL components declaration."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "COPYING"}
dependencies = [
    "tsfpga",
]

[tool.setuptools]
packages = ["verilog_ethernet"]
